--- a/resources/css/web.css
+++ b/resources/css/web.css
@@ -1,52 +1,78 @@
 body {
-    margin: 0;
     font-family: Arial, sans-serif;
-  }
-  
-  header {
-    background-color: #f2f2f2;
+    background-color: #222;
+    color: #fff;
+    margin: 0;
     padding: 20px;
+}
+
+header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 20px;
     text-align: center;
-  }
+}
+
+h1 {
+    margin: 0;
+    
+    
+}
+
+.content {
+    background-color: #333;
+    padding: 20px;
+    border-radius: 10px;
+    width: 60%; /* Ajusta el ancho según tus necesidades */
+    height: auto;
   
+  margin: 0 auto
+}
+
+.chart-container {
+  width: 40%; /* Ajusta el ancho según tus necesidades */
+  height: 100px; /* Ajusta la altura según tus necesidades */
+  margin: 0 auto; /* Centra la gráfica horizontalmente */
+}
+
+/* Navbar vertical */
+nav {
+  background-color: #333;
+  width: 200px; /* Ajusta el ancho según tus necesidades */
+  padding: 20px;
+  color: #fff;
+  position: fixed; /* Fija el navbar en su posición */
+  top: 0;
+  left: 0;
+  height: 100%;
+}
+
+nav ul {
+  list-style: none;
+  padding: 0;
+}
+
+nav li {
+  margin-bottom: 10px;
+  border-top: 2px solid gray; 
+}
+a {
+  text-decoration: none;
+  color: #fff;
+}
+
+/* Sección principal */
+main {
+  flex: 1; /* El contenido principal ocupará el espacio restante */
+  padding: 20px;
+}
+
+@media (max-width: 768px) {
   nav {
-    position: fixed; 
-    top: 0;
-    left: 0;
-    width: 15%; 
-    height: 80%; /* 100% de la altura de la viewport */
-    background-color: #ddd;
-    padding: 20px;
-    overflow-y: auto; /* Agrega scroll si el contenido del nav es más alto que la pantalla */
+      position: relative;
+      width: 100%;
+      height: auto;
+      /* Otros estilos para adaptar el navbar a pantallas pequeñas */
   }
-  
-  nav ul {
-    list-style-type: none;
-    padding: 0;
-  }
-  
-  nav li {
-    margin-bottom: 10px;
-  }
-  
-  main {
-    margin-left: 20%; 
-    padding: 20px;
-        min-height: calc(100vh - 120px); /* Ajustar el valor según la altura del header y footer */
-        padding: 20px;
-  }
-  
-  footer {
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    background-color: #f2f2f2;
-    padding: 20px;
-    text-align: center;
-  }
-  
-  /* Estilos para los gráficos (ejemplo usando Chart.js) */
-  .chart-container {
-    width: 80%;
-    height: 100px;
-  }
+}
